Refactor sorting, add validation, and enhance test coverage
Removed manual sorting logic in RepositorySearchServiceImpl and delegated it to the GitHub API. Added validation for `sortDirection` and improved exception handling for invalid date and empty criteria in RepoSearchCriteria. Updated tests accordingly and renaming mappers and DTOs for consistency.